<resources>
    <string name="app_name">BLingBLing</string>
    <string name="test_layout_title">TestLayout</string>
    <string name="test_layout_desc">An activity for testing.</string>
    <string name="test_layout_img">http://ondlsj2sn.bkt.clouddn.com/Fos8aWM3lzyxB621rEmzMhgTUn-p.webp</string>
    <string name="wan_android_title">WanAndroid</string>
    <string name="wan_android_desc">WanAndroid is a BBS created by many passionate youth who love Android.</string>
    <string name="wan_android_img">http://ondlsj2sn.bkt.clouddn.com/FvqOjFv6Vt3uW1LHdCzNksREmv3S.webp</string>
    <string name="zhihu_title">ZhihuDaily</string>
    <string name="zhihu_desc">Zhihu is a question-and-answer website where questions are created, answered, edited and organized by the community of its users</string>
    <string name="zhihu_img">http://ondlsj2sn.bkt.clouddn.com/Fi8e4rUvYUC3tp5UzU6mUQh4SkTK.webp</string>
    <string name="exchange_rate_title">Exchange Rate</string>
    <string name="exchange_rate_desc">Support to exchange currency around the world</string>
    <string name="exchange_rate_img">http://ondlsj2sn.bkt.clouddn.com/FgoM0tniC1eDMUOLrI3-P89zk3yt.webp</string>
    <string name="bilibili_title">IJKPlayer</string>
    <string name="bilibili_desc">Android video player based on FFmpeg n3.3, with MediaCodec, VideoToolbox support.</string>
    <string name="bilibili_img">http://ondlsj2sn.bkt.clouddn.com/FnFicLrus5vXqAw5oElFFXL1-zb3.webp</string>
    <string name="qi_niu_title">QiNiuYun</string>
    <string name="qi_niu_desc">QiNiuYun is online storage service provided by the QiNiuYun Co.,Ltd, through the interface to the customers with unlimited online storage space</string>
    <string name="qi_niu_img">http://ondlsj2sn.bkt.clouddn.com/Fg873GxilLa4Gxx78lloLg96Igvs.webp</string>
    <string name="floatingView_title">FloatingView</string>
    <string name="floatingView_desc">FloatingView can make the target view floating above the anchor view with cool animation</string>
    <string name="floatingView_img">http://ondlsj2sn.bkt.clouddn.com/FoswnjfkCoEaVY0Ijnnlur9BxYBl.webp</string>
    <string name="spotlight_title">Spotlight</string>
    <string name="spotlight_desc">Android Library that lights items for tutorials or walk-through etc</string>
    <string name="spotlight_img">http://ondlsj2sn.bkt.clouddn.com/FrTu8V2-Wu7nc2C4UIa_9-yp69ls.webp</string>
    <string name="_007_tiny_attr">Seen: 1 Caught: 1 \nWeight: 9.0kg Height: 0.5m</string>
    <string name="_007_desc">Squirtle\'s shell is not merely used for protection. The shell\'s rounded shape and the grooves on its surface help minimize resistance in water. enabling this Pokémon to swim at high speeds.</string>
    <string name="_007_tiny">Tiny Turtle Pokémon</string>
    <string name="_007_tiny_type">Type: Water</string>
    <string name="_007_tiny_name">SQUIRTLE</string>
    <string name="rich_editor_title">RichEditor</string>
    <string name="rich_editor_desc">Rich text editor which enables users to insert/delete emoji and text into edit-view.</string>
    <string name="rich_editor_img">http://ondlsj2sn.bkt.clouddn.com/FkLRL9du9H1_jy2C1yFTmCGswQSZ.webp</string>
    <string name="_008_send">发送</string>
    <string name="_008_cancel">取消</string>
    <string name="_008_post_blog">发微博</string>
    <string name="_008_user_name">咸水猫丶</string>
    <string name="_008_open">公开</string>
    <string name="_008_where_are_u">你在哪里?</string>
    <string name="_008_hint">分享新鲜事…</string>
    <string name="google_vr_title">Google VR</string>
    <string name="google_vr_desc">Virtual reality for everyone.</string>
    <string name="google_vr_img">http://ondlsj2sn.bkt.clouddn.com/FuAVy3cV-_oNaNbqhidirKgpR_Yd.webp</string>
    <string name="parallax_animation_title">Parallax Animation Frame</string>
    <string name="parallax_animation_desc">Virtual reality for everyone.</string>
    <string name="parallax_animation_img">http://ondlsj2sn.bkt.clouddn.com/FtnPm05owdbcJC_7mf53nbOcq2Gy.webp</string>
    <string name="_010_third_login">| 合作账号登录 |</string>
    <string name="diagonal_layout_title">DiagonalLayout</string>
    <string name="diagonal_layout_desc">With Diagonal Layout explore new styles and approaches on material design</string>
    <string name="diagonal_layout_img">http://ondlsj2sn.bkt.clouddn.com/FoPzP9JbDTqxMlhWCRvxPUo24IRn.webp</string>
    <string name="qqnavi_title">QQNaviView</string>
    <string name="qqnavi_desc">Mimic QQ navigation bar</string>
    <string name="qqnavi_img">http://ondlsj2sn.bkt.clouddn.com/FghQpL5VATXt6Wtlm575wiDseyvI.webp</string>
    <string name="step_view_title">StepView</string>
    <string name="step_view_desc">Step by step. Step indicator. Flow indicator</string>
    <string name="step_view_img">http://ondlsj2sn.bkt.clouddn.com/Fm0fTIwMIZyoJZDpAOnARBLN0vCZ.webp</string>
    <string name="honor_clock_title">HonorClock</string>
    <string name="honor_clock_desc">Step by step. Step indicator. Flow indicator</string>
    <string name="honor_clock_img">http://ondlsj2sn.bkt.clouddn.com/Fknk1q5piAA00DmqxUUGEaK4OGyh.webp</string>
    <string name="explosion_field_title">ExplosionField</string>
    <string name="explosion_field_desc">explosive dust effect for views</string>
    <string name="explosion_field_img">http://ondlsj2sn.bkt.clouddn.com/FlSTZDl1fCGGNNqrauOAm8hEqn7y.webp</string>
    <string name="parallax_iv_title">ParallaxImageView</string>
    <string name="parallax_iv_desc">An imageView can auto scroll with device rotating.</string>
    <string name="parallax_iv_img">http://ondlsj2sn.bkt.clouddn.com/FgwMJZ8Y0KswSkjINvGnOgRR96u3.webp</string>
    <string name="tetris_title">Tetris</string>
    <string name="tetris_desc">Soviet tile-matching puzzle video game released in June 1984.</string>
    <string name="tetris_img">http://ondlsj2sn.bkt.clouddn.com/FoiBsBwQR4vTQJ6A0FiHLaxcqjIK.webp</string>
    <string name="nfc_title">NFC Tools</string>
    <string name="nfc_desc">Near-field communication (NFC) is a set of communication protocols that enable two electronic devices</string>
    <string name="nfc_img">http://ondlsj2sn.bkt.clouddn.com/FuEdGMh6ReHpM2hTK0_MZ39xTjX1.webp</string>
    <string name="ganged_recycle_title">GangedRecycleView</string>
    <string name="ganged_recycle_desc">Two RecycleViews Joint sliding …</string>
    <string name="ganged_recycle_img">http://ondlsj2sn.bkt.clouddn.com/FnLyI2fmB2ykukTQfKY6uBTKVdjB.webp</string>
    <string name="facebook_title">FaceBook-Shimmer</string>
    <string name="facebook_desc">Add a shimmering effect to any view in your app.</string>
    <string name="facebook_img">http://ondlsj2sn.bkt.clouddn.com/FsghEYkztX6HGcQufyUmB9N-DvRI.webp</string>
    <string name="like_smile_title">LikeSmileView</string>
    <string name="like_smile_desc">Imitating ZuiWorld\'s application of thumb up function</string>
    <string name="like_smile_img">http://ondlsj2sn.bkt.clouddn.com/FpoNvqVck6N_pe45kqlb4bB00JRE.jpg</string>
    <string name="_021_title">Popup | 银制鹿头灯</string>
    <string name="_021_desc">• 材质：铝 / 钢 \n• 电压：110–230V \n• 重量：1.3 kg</string>
    <string name="google_map_title">GoogleMaps</string>
    <string name="google_map_desc">This\'s a mapping demo app developed by me for the Android mobile operating systems, it uses Google Maps for its information.</string>
    <string name="google_map_img">http://ondlsj2sn.bkt.clouddn.com/FrvJ7OlyyBDRleOYvBE07TRslRON.webp</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="app_bar_behavior">dinson.customview.behavior._003Behavior</string>
    <string name="if_share">&#xe654;</string>
    <string name="if_arrow_left">&#xe697;</string>
    <string name="if_pokemon">&#xe633;</string>
    <string name="if_complete">&#xe619;</string>
    <string name="if_sunny_0">&#xe60b;</string>
    <string name="if_clear_1">&#xe60b;</string>
    <string name="if_fair_2">&#xe60b;</string>
    <string name="if_fair_3">&#xe60b;</string>
    <string name="if_cloudy_4">&#xe624;</string>
    <string name="if_partly_cloudy_5">&#xe624;</string>
    <string name="if_partly_cloudy_6">&#xe624;</string>
    <string name="if_mostly_cloudy_7">&#xe624;</string>
    <string name="if_mostly_cloudy_8">&#xe624;</string>
    <string name="if_overcast_9">&#xe604;</string>
    <string name="if_shower_10">&#xe610;</string>
    <string name="if_thundershower_11">&#xe61b;</string>
    <string name="if_thundershower_with_hail_12">&#xe61c;</string>
    <string name="if_light_rain_13">&#xe60d;</string>
    <string name="if_moderate_rain_14">&#xe611;</string>
    <string name="if_heavy_rain_15">&#xe617;</string>
    <string name="_010_username">邮箱 / 手机号</string>
    <string name="password">密码</string>
    <string name="_010_register">注册</string>
    <string name="_010_login">登录</string>
</resources>