<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:elevation="1dp"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@id/cancel"
            style="@style/font.normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/_008_cancel"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_008_post_blog"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tvName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@id/tvName"
            style="@style/font.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_008_user_name"
            android:textColor="@color/textHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_008_send"
            android:text="@string/_008_send"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <dinson.customview.widget._008richeditor.widget.RichEditor
        android:id="@+id/richEditor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/_008_hint"
        android:maxLength="2000"
        android:padding="12dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_008_tab"
            android:drawableStart="@drawable/_008_location"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/_008_where_are_u"
            android:textColor="@color/textHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_008_tab"
            android:drawableStart="@drawable/_008_earth"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/_008_open"
            android:textColor="#4c7aab" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="#f9f9f9"
        android:elevation="1dp"
        android:orientation="horizontal">

        <ImageButton
            style="@style/_008Tab"
            android:src="@drawable/selector_008_tab1" />

        <ImageButton
            style="@style/_008Tab"
            android:src="@drawable/selector_008_tab2" />

        <ImageButton
            style="@style/_008Tab"
            android:src="@drawable/selector_008_tab3" />

        <ImageButton
            android:id="@+id/ib_emoji"
            style="@style/_008Tab"
            android:src="@drawable/selector_008_tab4" />

        <ImageButton
            style="@style/_008Tab"
            android:src="@drawable/selector_008_tab5" />
    </LinearLayout>

    <dinson.customview.widget._008richeditor.widget.EmojiLayout
        android:id="@+id/emojiLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />
</LinearLayout>
