<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_010_login_bg"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/qq"
        style="@style/_010_Item_ThirdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/_010_login_qq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weibo"/>

    <ImageView
        android:id="@+id/weibo"
        style="@style/_010_Item_ThirdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/_010_login_weibo"
        app:layout_constraintLeft_toRightOf="@+id/qq"
        app:layout_constraintRight_toLeftOf="@+id/weixin"
        app:layout_constraintTop_toTopOf="@+id/qq"/>

    <ImageView
        android:id="@+id/weixin"
        style="@style/_010_Item_ThirdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/_010_login_weixin"
        app:layout_constraintLeft_toRightOf="@+id/weibo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/qq"/>

    <TextView
        style="@style/_010_Item_ThirdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/_010_third_login"
        android:textColor="#C4996B"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/qq"
        app:layout_constraintLeft_toLeftOf="@+id/qq"
        app:layout_constraintRight_toRightOf="@+id/weixin"/>

    <TextView
        android:id="@+id/register"
        style="@style/_010_Item_Login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/_010_login_gray"
        android:gravity="center"
        android:text="@string/_010_register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@+id/username"
        app:layout_constraintRight_toLeftOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:id="@+id/login"
        style="@style/_010_Item_Login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/_010_login_yellow"
        android:gravity="center"
        android:text="@string/_010_login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/register"
        app:layout_constraintRight_toRightOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/register"/>

    <EditText
        android:id="@+id/username"
        style="@style/_010_Item_Login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/_010_login_edit"
        android:gravity="center"
        android:hint="@string/_010_username"
        android:inputType="none"
        android:textColor="#C4996B"
        android:textColorHint="#838282"
        android:textCursorDrawable="@drawable/shape_010_cursor_color"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/password"
        style="@style/_010_Item_Login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/_010_login_edit"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#C4996B"
        android:textColorHint="#838282"
        android:textCursorDrawable="@drawable/shape_010_cursor_color"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintLeft_toLeftOf="@+id/username"
        app:layout_constraintRight_toRightOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"/>
</android.support.constraint.ConstraintLayout>